# neural-noodle

./: LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
model/: model.pth
neural/: agent.py  model.py  state.py  trainer.py
noodle/: __init__.py  entities.py  game.py
noodle/controller/: __init__.py  controller.py
noodle/model/: __init__.py  entities.py  model.py
noodle/view/: view.py
src/neural/: __init__.py  environment.py  train.py
src/noodle/controller/: controller.py
src/noodle/model/: __init__.py  entities.py  model.py
src/noodle/view/: __init__.py  view.py
tools/docker/: Dockerfile
