[tool.poetry]
# Name and version of the project.
name = "neural-noodle"
version = "0.1.0"

# Short description of the project.
description = "A reinforcement learning-based Snake game called Neural Noodle."

# Author information.
authors = ["Tristan Tibbs <tristantibbs@gmail.com>"]

# License under which the project is distributed.
license = "MIT"

# Path to the README file for project documentation.
readme = "README.md"

# Specify where the packages are located in the repository.
packages = [
    { include = "neural", from = "src" },
    { include = "noodle", from = "src" }
]

# Production dependencies.
[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
numpy = "^1.21.0"
torch = "^2.4.1"
matplotlib = "^3.9.2"
ipython = "^8.28.0"
gymnasium = ">=0.28.1,<0.30"
stable-baselines3 = "^2.3.2"

# Development dependencies.
[tool.poetry.dev-dependencies]
ruff = "^0.1.14"
pytest = "^7.4.4"
mypy = "^1.8.0"

# Poetry build system requirements.
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
strict = true

[tool.ruff]
line-length = 80
indent-width = 4
exclude = ["**/__init__.py"]

# Linting rules
select = ["E", "F", "I", "N", "Q", "W"]
